--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__/main.cpython-36.pyc
 __pycache__/errorHandler.cpython-36.pyc
 Testing/TRANSFER/Input Files/input_test_valid_amount.txt
 Testing/TRANSFER/Expected Output Files/transaction_file_test_valid_amount.txt
+Docs/Assignment3_Failure_Report.docx
